Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #2394: skip older template widgets and inconsistent compounds in upgrade
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 