@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #2409: multiple flexible image widgets upgrade naming problem
 - #2394: skip older template widgets and inconsistent compounds in upgrade
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
